WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
57030
REGRESSION (
r81782
): http/tests/inspector/extensions-resources-redirect.html sometimes crashes WebKit2's web process while handling a WebIconDatabaseProxy::ReceivedIconLoadDecision message
https://bugs.webkit.org/show_bug.cgi?id=57030
Summary
REGRESSION (r81782): http/tests/inspector/extensions-resources-redirect.html ...
Adam Roben (:aroben)
Reported
2011-03-24 09:55:54 PDT
http/tests/inspector/extensions-resources-redirect.html sometimes crashes WebKit2's web process. We know this because the web process crashing then causes the UI process to crash (
bug 57029
). We don't know what's causing the web process to crash, though, because the UI process crash is masking it.
Attachments
Fix WebCore and unskip the test
(3.56 KB, patch)
2011-03-24 13:17 PDT
,
Brady Eidson
aroben
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Roben (:aroben)
Comment 1
2011-03-24 10:00:10 PDT
Ooh, I found a crash log from the web process. See the URL.
Adam Roben (:aroben)
Comment 2
2011-03-24 10:04:47 PDT
Looks like the first time this happened was in
r81782
, which seems like a related change.
http://build.webkit.org/builders/SnowLeopard%20Intel%20Release%20%28WebKit2%20Tests%29/builds/9955
Adam Roben (:aroben)
Comment 3
2011-03-24 10:05:09 PDT
Added the test to the mac-wk2 Skipped file in
r81874
.
Adam Roben (:aroben)
Comment 4
2011-03-24 10:07:38 PDT
<
rdar://problem/9182074
>
Brady Eidson
Comment 5
2011-03-24 13:08:18 PDT
Figured this out. A serious of events have to happen with both the network layer and the WebProcess -> UIProcess layer to reproduce this. There's probably no practical way to reproduce the exact conditions necessary in layout-test land, but we obviously already had coverage that caught this. In fact, the single test Adam deactivated isn't the only one that can cause this - I've seen it locally with other https tests (though less frequently) Patch is coming soon.
Brady Eidson
Comment 6
2011-03-24 13:17:20 PDT
Created
attachment 86819
[details]
Fix WebCore and unskip the test
Brady Eidson
Comment 7
2011-03-24 13:23:20 PDT
r81892
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug