Source/WebCore: https://bugs.webkit.org/show_bug.cgi?id=57030 REGRESSION (r81782): http/tests/inspector/extensions-resources-redirect.html sometimes crashes WebKit2's web process while handling a WebIconDatabaseProxy::ReceivedIconLoadDecision message

Reviewed by Adam Roben.

The callback objects had some bogus ASSERTs and missed a relevant null check. If a callback was waiting on
a message back from the UIProcess, but was invalidated from within the WebProcess in the meantime, it's
perfectly valid to attempt to performCallback() after the callback function pointer has been cleared.

* loader/icon/IconDatabaseBase.h:
(WebCore::EnumCallback::performCallback):
(WebCore::EnumCallback::invalidate):
(WebCore::EnumCallback::EnumCallback):
(WebCore::ObjectCallback::performCallback):
(WebCore::ObjectCallback::invalidate):
(WebCore::ObjectCallback::ObjectCallback):

LayoutTests: Resolving https://bugs.webkit.org/show_bug.cgi?id=57030, unskip the busted test.

Reviewed by Adam Roben.

* platform/mac-wk2/Skipped:



git-svn-id: svn://svn.chromium.org/blink/trunk@81892 bbb929c8-8fbe-4397-9dbb-9b2b20218538