third_party/WebKit/Source/WebCore/loader/icon/IconDatabaseBase.h
@@ -91,14 +91,14 @@ public:
 
     void performCallback(EnumType result)
     {
-        ASSERT(m_callback);
+        if (!m_callback)
+            return;
         m_callback(result, context());
         m_callback = 0;
     }
     
     void invalidate()
     {
-        ASSERT(m_callback);
         m_callback = 0;
     }
 
@@ -107,6 +107,7 @@ private:
         : CallbackBase(context)
         , m_callback(callback)
     {
+        ASSERT(m_callback);
     }
 
     CallbackFunction m_callback;
@@ -129,14 +130,14 @@ public:
 
     void performCallback(ObjectType result)
     {
-        ASSERT(m_callback);
+        if (!m_callback)
+            return;
         m_callback(result, context());
         m_callback = 0;
     }
     
     void invalidate()
     {
-        ASSERT(m_callback);
         m_callback = 0;
     }
 
@@ -145,6 +146,7 @@ private:
         : CallbackBase(context)
         , m_callback(callback)
     {
+        ASSERT(m_callback);
     }
 
     CallbackFunction m_callback;
